# ydotool

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Commands.cpp  Commands.hpp  CommonIncludes.hpp  LICENSE  README.md  ydotool.cpp  ydotool.spec  ydotoold.service
.github/: FUNDING.yml
.github/workflows/: push_pr_build_cmake.yml  release_cmake.yml
Client/: tool_click.c  tool_key.c  tool_mousemove.c  tool_stdin.c  tool_type.c  ydotool.c  ydotool.cpp  ydotool.h  ydotool.hpp
Commands/: Click.cpp  Key.cpp  MouseMove.cpp  Type.cpp
Daemon/: CMakeLists.txt  ydotool.service  ydotool.service-openrc.in  ydotool.service.in  ydotoold.c  ydotoold.cpp  ydotoold.hpp  ydotoold.service.in
Daemon/systemd/: CMakeLists.txt
Tools/: Tools.hpp
Tools/Click/: Click.cpp  Click.hpp
Tools/Key/: Key.cpp  Key.hpp
Tools/MouseDown/: MouseDown.cpp  MouseDown.hpp
Tools/MouseMove/: MouseMove.cpp  MouseMove.hpp
Tools/MouseMoveRelative/: MouseMoveRelative.cpp  MouseMoveRelative.hpp
Tools/MouseUp/: MouseUp.cpp  MouseUp.hpp
Tools/Recorder/: Recorder.cpp  Recorder.hpp
Tools/Sleep/: Sleep.cpp  Sleep.hpp
Tools/Type/: Type.cpp  Type.hpp
docs/: ydotool.1  ydotoold.8
manpage/: CMakeLists.txt  ydotool.1.scd  ydotoold.8.scd
